// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scene API /api/scenes GET should retun all scene 1`] = `
Array [
  Object {
    "description": "this is a test",
    "name": "scene_1",
    "sceneId": 1,
  },
  Object {
    "description": "this is a second test",
    "name": "scene_2",
    "sceneId": 2,
  },
]
`;

exports[`Scene API /api/scenes POST should create a scene 1`] = `
Array [
  RowDataPacket {
    "description": "this is a test scene",
    "name": "testScene",
    "scene_id": 3,
  },
]
`;

exports[`Scene API /api/scenes POST should create a scene 2`] = `
Array [
  RowDataPacket {
    "action_id": 4,
    "body": "{\\"on\\":true}",
    "name": "action",
    "scene_id": 3,
    "target_id": 2,
    "type": "DIO",
  },
]
`;

exports[`Scene API /api/scenes/:id PATCH should update a scene 1`] = `Object {}`;
